Fix trusty repos Don't show optional components on all configs

--- a/usr/share/mintsources/trusty/mintsources.conf
+++ b/usr/share/mintsources/trusty/mintsources.conf
@@ -1,6 +1,6 @@
 [general]
 description=Netrunner 14 (Frontier)
-codename=trusty
+codename=frontier-14
 base_codename=trusty
 use_ppas=true
 
@@ -9,10 +9,6 @@ default=http://ppa.launchpad.net/netrunner-os/frontier-14-packages/ubuntu
 base_default=http://archive.ubuntu.com/ubuntu
 mirrors=/usr/share/python-apt/templates/Netrunner14.mirrors
 base_mirrors=/usr/share/python-apt/templates/Ubuntu.mirrors
-
-[optional_component_1]
-name=unstable
-description=Unstable packages (unstable)
 
 [detection]
 main_identifier=id:netrunner_main
